SandBox-2/force-app/main/default/objects/IMS_Product__c/fields/Doses__c.field-meta.xml
<CustomField>
    <fullName>Doses__c</fullName>
    <formula>IF( Product__c = &quot;TYPHIM VI 20 DOSE&quot;,  Units__c * 20, Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>