SandBox-2/force-app/main/default/objects/IMS_Product__c/fields/IMS_Month_Ref__c.field-meta.xml
<CustomField>
    <fullName>IMS_Month_Ref__c</fullName>
    <label>IMS Month Ref</label>
    <referenceTo>IMS_Monthly_Stats__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>