SandBox-2/force-app/main/default/objects/IMS_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>